# pepper

./: .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  Makefile  README.rst  azure-pipelines.yml  pyproject.toml  setup.py  tox.ini
pepper/: __init__.py  cli.py  exceptions.py  libpepper.py  retcode.py  script.py
scripts/: __init__.py  pepper
tests/: __init__.py  conftest.py  requirements.txt
tests/integration/: test_clients.py  test_json.py  test_local.py  test_login_opts.py  test_poller.py  test_profile.py  test_token.py  test_vanilla.py
tests/unit/: test_init.py  test_login_details.py  test_retcodes_error.py  test_retcodes_fail_fail.py  test_retcodes_fail_none.py  test_retcodes_fail_pass.py  test_retcodes_none_none.py  test_retcodes_pass_fail.py  test_retcodes_pass_none.py  test_retcodes_pass_pass.py  test_token.py
