[tool.poetry]
name = "salt-pepper"
version = "0.7.7"
description = "A CLI front-end to a running salt-api system."
license = "Apache-2.0"
authors = ["Seth House <shouse@saltstack.com>"]
readme = "README.rst"
homepage = "http://saltstack.com"
repository = "https://github.com/saltstack/pepper"
documentation = "https://github.com/saltstack/pepper"
keywords = [
  "salt",
  "saltstack",
  "cli",
  "automation",
  "orchestration",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Cython",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Topic :: System :: Clustering",
  "Topic :: System :: Distributed Computing",
  "Topic :: Utilities",
  "Typing :: Typed"
]
packages = [
  { include = "scripts/pepper" }
]

[tool.poetry.dependencies]
python = "^3.6.1"
requests-gssapi = {version = "^1.2.2", optional = true}

[tool.poetry.dev-dependencies]
bandit = "^1.6.3"
black = "^20.8b1"
CherryPy = "^18.6.0"
isort = "^5.6.4"
mock = "^4.0.3"
mypy = "^0.790"
pre-commit = "^2.9.3"
pylint = "^2.6.0"
pytest = "^6.1.2"
pytest-cov = "^2.10.1"
pytest-rerunfailures = "^9.1.1"
pyzmq = "^20.0.0"
setuptools-scm = "^4.1.2"
tornado = "^6.1"
pytest-salt = {git = "https://github.com/saltstack/pytest-salt"}

[tool.poetry.extras]
kerberos = ["requests-gssapi"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "scripts.pepper:cli"

[tool.black]
line-length = 119
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
src_paths = ["pepper", "tests"]
profile = "black"
line_length = 119
multi_line_output = 3
include_trailing_comma = true
combine_as_imports = true
default_section = "THIRDPARTY"

[tool.pylint.FORMAT]
max-line-length="119"
